Added transect endpoint
